adds reviewer to the staging deployment

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,9 @@
   </head>
   <body>
     <div id="app"></div>
+    <h1>adds environments to the deployment</h2>
     <footer>
-      Pokémon and Pokémon character names are trademarks of Nintendo.
+      Pokémon and Pokémon character names are trademarks of Nintendo. 
     </footer>
   </body>
 </html>
