made changes to be reivewed

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <title>Pokemon</title>
 </head>
 <body>
+<!-- This change is made on the branch created at 20:27 on September 30. -->
 <div id="app"></div>
 <footer>Pokémon and Pokémon character names are trademarks of Nintendo.</footer>
 </body>
