--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <title>Pokemon</title>
 </head>
 <body>
+<div>Version 21:39</div>
 <div id="app"></div>
 <footer>Pokémon and Pokémon character names are trademarks of Nintendo.</footer>
 </body>
